# oxid-relay

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.example.toml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  message.rs  queue.rs  transport.rs
crates/dispatcher/: Cargo.toml
crates/dispatcher/src/: lib.rs  retry.rs
crates/http-api/: Cargo.toml
crates/http-api/src/: lib.rs
crates/ingress-smtp/: Cargo.toml
crates/ingress-smtp/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/oxid-relay/: Cargo.toml
crates/oxid-relay/src/: main.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: engine.rs  error.rs  http.rs  lib.rs  loader.rs  manifest.rs  transport.rs
crates/queue-sqlite/: Cargo.toml
crates/queue-sqlite/src/: lib.rs
crates/transport-smtp/: Cargo.toml
crates/transport-smtp/src/: lib.rs
docs/: authentication.md  subject-prefix.md  transports.md
packaging/launchd/: com.oxid-relay.plist
packaging/systemd/: oxid-relay.service
packaging/windows/: install-service.ps1
plugins/graph/: plugin.toml  script.rhai
plugins/ntfy/: plugin.toml  script.rhai
plugins/teams/: plugin.toml  script.rhai
