[package]
name = "oxid-relay-logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
