[package]
name = "oxid-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "oxid-relay"
path = "src/main.rs"

[dependencies]
oxid-relay-core.workspace = true
oxid-relay-transport-smtp.workspace = true
oxid-relay-queue-sqlite.workspace = true
oxid-relay-http-api.workspace = true
oxid-relay-logging.workspace = true
oxid-relay-plugin.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
